<resources>
    <string name="app_name">MyGathering.com</string>
    <string name="app_description">A Full Stack Application</string>
    <string name="app_year">May 2017</string>
    <string name="action_settings">Settings</string>
    <string name="pref_group_login_label">Login Credentials</string>
    <string name="pref_group_gatherings_label">Search Preferences</string>
    <string name="pref_group_options_label">Options</string>
    <string name="pref_group_login_key" translatable="false">group_login</string>
    <string name="pref_group_gatherings_key" translatable="false">group_search_gatherings</string>
    <string name="pref_group_options_key" translatable="false">group_options</string>
    <string name="pref_preferred_email_label">Email</string>
    <string name="pref_preferred_email_key" translatable="false">preferred email</string>
    <string name="pref_preferred_email_default" translatable="false">preferred email not set</string>
    <string name="pref_remove_preferred_gathering_location_key" translatable="false">remove preferred gathering location</string>
    <string name="pref_preferred_gathering_location_label">Location</string>
    <string name="pref_preferred_gathering_location_key" translatable="false">preferred gathering location</string>
    <string name="pref_preferred_gathering_location_default" translatable="false">Please provide your preferred search location</string>
    <string name="pref_preferred_gathering_distance_label">Max Distance (km)</string>
    <string name="pref_preferred_gathering_distance_key" translatable="false">preferred gathering distance</string>
    <string name="pref_preferred_gathering_distance_default" translatable="false">20</string>
    <string name="pref_preferred_gathering_topic_label">Topic</string>
    <string name="pref_preferred_gathering_topic_key" translatable="false">preferred gathering topic</string>
    <string name="pref_preferred_gathering_topic_default" translatable="false">All</string>
    <string name="pref_preferred_gathering_type_label">Type</string>
    <string name="pref_preferred_gathering_type_key" translatable="false">preferred gathering type</string>
    <string name="pref_preferred_gathering_type_default" translatable="false">All</string>
    <string name="pref_search_freq_label">New Gathering Search Frequency</string>
    <string name="pref_search_freq_key" translatable="false">preferred search frequency</string>
    <string name="pref_search_freq_default" translatable="false">Every 2 Minutes</string>
    <string name="pref_search_freq_min_label">Every 2 Minutes</string>
    <string name="pref_search_freq_min_value" translatable="false">120</string>
    <string name="pref_search_freq_hour_label">Every hour</string>
    <string name="pref_search_freq_hour_value" translatable="false">3600</string>
    <string name="pref_search_freq_day_label">Every 24 hours</string>
    <string name="pref_search_freq_day_value" translatable="false">86400</string>
    <string name="pref_allow_notifications_label">Allow Notifications</string>
    <string name="pref_allow_notifications_key" translatable="false">allow notifications</string>
    <string name="pref_save_credentials_key" translatable="false">Save Credentials</string>
    <string name="pref_logged_email_key" translatable="false">logged user email</string>
    <string name="pref_allow_notifications_true">Notifications allowed</string>
    <string name="pref_allow_notifications_false">Notifications not allowed</string>
    <string name="title_login_screen">Sign Into Your Account</string>
    <string name="title_login_email">Email</string>
    <string name="title_login_password">Password</string>
    <string name="title_register_screen">Sign Up For Free</string>
    <string name="title_register_name">Name</string>
    <string name="title_register_email">Email Address</string>
    <string name="login_save_credentials">Remember Me</string>
    <string name="btn_signin">Sign In</string>
    <string name="btn_register">Register Now</string>
    <string name="register_login_msg">Already a member? Login</string>
    <string name="login_register_msg">Not yet a member?  Register now</string>
    <string name="login_password_msg">If you have not reset your password, use the password emailed to you during registration!</string>
    <string name="action_logout">Sign Out</string>
    <string name="gathering_reminder_notification_title">New Gatherings</string>
    <string name="gathering_reminder_notification_title_1">New Gathering</string>
    <string name="pref_last_search_date_key">last_search_date</string>
    <string name="action_fav_add">Add To Favorites</string>
    <string name="action_map_show">Show Map</string>
    <string name="action_request_invite">Request Invite</string>
    <string name="gathering_description_test_">Bacon ipsum dolor amet biltong cow tenderloin corned beef beef ribs sirloin swine shankle tongue alcatra ham hock hamburger shank. Rump pork chop fatback, drumstick tongue shoulder turducken ribeye. Porchetta ham hock t-bone jowl, prosciutto shoulder turducken leberkas salami pork belly frankfurter. T-bone filet mignon kevin swine turducken chicken beef ribs. Bacon ipsum dolor amet biltong cow tenderloin corned beef beef ribs sirloin swine shankle tongue alcatra ham hock hamburger shank. Rump pork chop fatback, drumstick tongue shoulder turducken ribeye. Porchetta ham hock t-bone jowl, prosciutto shoulder turducken leberkas salami pork belly frankfurter. T-bone filet mignon kevin swine turducken chicken beef ribs. Bacon ipsum dolor amet biltong cow tenderloin corned beef beef ribs sirloin swine shankle tongue alcatra ham hock hamburger shank. Rump pork chop fatback, drumstick tongue shoulder turducken ribeye. Porchetta ham hock t-bone jowl, prosciutto shoulder turducken leberkas salami pork belly frankfurter. T-bone filet mignon kevin swine turducken chicken beef ribs.</string>
    <string name="action_search">Search</string>
    <string name="title_search_filters_distance">Distance</string>
    <string name="title_search_filters">Search Filters</string>
    <string name="btn_add_new_location">ADD NEW LOCATION</string>
    <string name="location_list">Locations</string>
    <string name="privacy">http://www.google.com/policies/privacy</string>
    <string name="need_location_permission_message">You need to enable location permissions first</string>
    <string name="location_permissions_granted_message">Location Permissions Granted</string>
    <string name="location_permissions">Location Permissions</string>
    <string name="app_title_search_filters">Search Filters</string>
    <string name="title_search_filter_permissions">Required Permissions</string>
    <string name="title_search_filter_instructions">Select your filters</string>
    <string name="title_search_filter_distance">Max Distance (km)</string>
    <string name="title_search_filter_location">Location</string>
    <string name="btn_search_for_gatherings">Search</string>
    <string name="search_results_msg">1 match found</string>
    <string name="search_results_msg_multiple"> matches found</string>
    <string name="select_a_location_default">Select a location</string>
    <string name="title_topics">Topics</string>
    <string name="title_types">Types</string>
    <string name="title_search_filter_topic">Topic</string>
    <string name="title_search_filter_type">Type</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="action_add_gathering">Create Gathering</string>
    <string name="hint_name">Title</string>
    <string name="hint_description">Description</string>
    <string name="content_description_gathering_details_icon">Gathering Details Icon</string>
    <string name="nav_title_details">DETAILS</string>
    <string name="nav_title_location">LOCATION</string>
    <string name="nav_title_dates">DATE | TIME</string>
    <string name="nav_title_banner">BANNER</string>
    <string name="nav_title_save">SAVE</string>
    <string name="form_footer_banner">Tap the icon to select an image.</string>
    <string name="title_title">Title</string>
    <string name="hint_title">Enter a title for your Gathering.</string>
    <string name="title_topic">Topic</string>
    <string name="title_type">Type</string>
    <string name="title_description">Description</string>
    <string name="btn_next_to_location">NEXT - SELECT LOCATION</string>
    <string name="title_location">Location</string>
    <string name="title_directions">Directions</string>
    <string name="btn_next_to_dates">NEXT - SELECT START AND END DATE</string>
    <string name="title_access">Access</string>
    <string name="title_status">Status</string>
    <string name="title_publish_later">Publish Later</string>
    <string name="title_published_now">Published Now</string>
    <string name="title_public">Public</string>
    <string name="title_private">Private</string>
    <string name="msg_access_public">Public gatherings can be found in searches and viewed by the world.</string>
    <string name="msg_access_private">Private gatherings can only be viewed with an invitation.</string>
    <string name="msg_status_publish">Published gatherings can be found by the world.</string>
    <string name="msg_status_notpublish">Wait to publish your gathering when the time is right.</string>
    <string name="btn_save_new_gathering">SAVE NEW GATHERING</string>
    <string name="title_banner">Promotional Banner</string>
    <string name="toast_not_connected_to_internet">You are not connected to the internet!</string>
    <string name="content_description_gathering_banner">Gathering Banner</string>
    <string name="details_title_notes">Notes</string>
    <string name="toast_fav_added">Gathering added to favorites.  Favorites can be viewed offline.</string>
    <string name="toast_fav_removed">Gathering removed from favorites</string>
    <string name="content_date_filter">Select date filter icon</string>
    <string name="content_location_filter">Location Select Icon</string>
    <string name="content_topic_filter">Topic filter icon</string>
    <string name="content_type_filter">Type filter icon</string>
    <string name="label_type_1">All Gathering Types</string>
    <string name="label_type_2">Appearance or Signing</string>
    <string name="label_type_3">Attraction</string>
    <string name="label_type_4">Camp, Trip, or Retreat</string>
    <string name="label_type_5">Class, Training, or Workshop</string>
    <string name="label_type_6">Concert or Performance</string>
    <string name="label_type_7">Conference</string>
    <string name="label_type_8">Convention</string>
    <string name="label_type_9">Dinner or Gala</string>
    <string name="label_type_10">Festival or Fair</string>
    <string name="label_type_11">Game or Competition</string>
    <string name="label_type_12">Meeting or Networking Event</string>
    <string name="label_type_13">Other</string>
    <string name="label_type_14">Party or Social Gathering</string>
    <string name="label_type_15">Race or Endurance Event</string>
    <string name="label_type_16">Rally, Protest, or Demonstration</string>
    <string name="btn_cancel_new_gathering">CANCEL</string>
    <string name="content_description_promotional_banner">Promotional Banner</string>
    <string name="content_description_camera_icon">Camera Icon</string>
    <string name="msg_select_promotional_banner">SELECT PROMOTIONAL BANNER</string>
    <string name="msg_bring_your_gathering_to_life">Bring your gathering to life.</string>
    <string name="msg_promote_banner">Upload an awesome banner to promote your gathering. We recommend using at least a 2160x1080px (2:1 ratio) image that\'s no larger than 10MB.</string>
    <string name="msg_banner_crop">All banners will be cropped to a 2:1 width to height ratio.</string>
    <string name="btn_next_save">NEXT - SAVE GATHERING</string>
</resources>