<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/add_gathering_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/margin_16dp"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_16dp"
                android:layout_marginStart="@dimen/margin_8dp"
                android:layout_marginTop="@dimen/margin_16dp"
                android:text="@string/title_banner"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/colorPrimaryDark" />

            <ImageView
                android:id="@+id/iv_banner"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/content_description_promotional_banner"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:id="@+id/layout_no_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@color/colorGrey"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_add_banner"
                    android:layout_width="@dimen/icon_height_width"
                    android:layout_height="@dimen/icon_height_width"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="@dimen/margin_8dp"
                    android:contentDescription="@string/content_description_camera_icon"
                    app:srcCompat="@drawable/ic_photo_camera_primary_24dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_8dp"
                    android:gravity="center_horizontal"
                    android:text="@string/msg_select_promotional_banner"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_8dp"
                    android:gravity="center_horizontal"
                    android:text="@string/msg_bring_your_gathering_to_life"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_8dp"
                    android:text="@string/msg_promote_banner"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/margin_8dp"
                    android:text="@string/msg_banner_crop"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            </LinearLayout>


            <View
                android:layout_width="fill_parent"
                android:layout_height="@dimen/title_line_view_height"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:background="@color/colorAccent" />

            <Button
                android:id="@+id/btn_next_to_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimaryLight"
                android:text="@string/btn_next_save"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/colorWhite" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                android:text="@string/form_footer_banner"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/colorAccent" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>